--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clone Youtube - Simples</title>
-    <link rel="stylesheet" href="/assets/style.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/7819412f9b.js" crossorigin="anonymous"></script>
 </head>
 
